# neural_tracking_torch

./: .gitignore  README.md  environment.yml  example_tracking_sim.py  example_tracking_sim_generic.py  generate_data.py  generate_data_generic.py  generate_images_main.py  pyproject.toml  pytorch_example_tracking_sim.py  pytorch_infer.py  pytorch_train.py  train.py  train_generic.py
models/pt_tfstyle_smoke/: generate_data.py  pytorch_train.py
